# talk-python-stack

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01eb0c883698_add_initial_models.py
app/jokes_api/: dependencies.py  main.py
app/jokes_api/models/: models.py
app/jokes_api/resources/: jokes.py
app/jokes_api/schemas/: __init__.py  schemas.py
app/jokes_api/services/: joke_service.py
